--- a/index.html
+++ b/index.html
@@ -55,21 +55,25 @@
       ::-webkit-scrollbar-thumb { background: #18181b; border-radius: 10px; }
       ::-webkit-scrollbar-thumb:hover { background: #10b981; }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
+    "framer-motion": "https://esm.sh/framer-motion@^12.24.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
-  </head>
+</head>
   <body class="text-zinc-300 selection:bg-emerald-500/30 overflow-x-hidden">
     <div class="noise" aria-hidden="true"></div>
     <div id="root"></div>
+    <!-- Entry point for the application -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
